force-app/main/default/objects/Case/fields/Sectors__c.field-meta.xml
<CustomField>
    <fullName>Sectors__c</fullName>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto &amp; Auto Components</fullName>
            </value>
            <value>
                <fullName>CIP &amp; Retail</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Global Delivery</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Law Firms</fullName>
            </value>
            <value>
                <fullName>Owners &amp; Private Clients</fullName>
            </value>
            <value>
                <fullName>PE/VC</fullName>
            </value>
            <value>
                <fullName>Pharma &amp; Healthcare Services</fullName>
            </value>
            <value>
                <fullName>Real Estate &amp; Infra</fullName>
            </value>
            <value>
                <fullName>TMT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>