force-app/main/default/objects/Case/recordTypes/Record_Type_For_Read_Only_cases.recordType-meta.xml
<RecordType>
    <fullName>Record_Type_For_Read_Only_cases</fullName>
    <active>true</active>
    <businessProcess>Support Process For Case Page Layout</businessProcess>
    <label>Record Type For Read Only cases</label>
</RecordType>