force-app/main/default/objects/Case/validationRules/Closed_To_InProNewConvert_is_not_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_To_InProNewConvert_is_not_allowed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( PRIORVALUE(Status), &apos;Converted to New Client&apos;),
OR(ISPICKVAL(Status , &quot;New&quot;), ISPICKVAL(Status , &quot;In Progress&quot;),
ISPICKVAL(Status , &quot;Closed&quot;)),
ISCHANGED(Status))</errorConditionFormula>
    <errorMessage>Converted To New Client to &apos;Closed/ In-Progress/New&apos; is not allowed</errorMessage>
</ValidationRule>