force-app/main/default/objects/Case/validationRules/Converted_to_new_Client.validationRule-meta.xml
<ValidationRule>
    <fullName>Converted_to_new_Client</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(Status , &quot;Converted to New Client&quot;),
ISCHANGED(Status))
&amp;&amp;
 OR(ISPICKVAL(Sectors__c, &quot;&quot;) ,ISBLANK(SuppliedName),ISBLANK(SuppliedEmail ),ISBLANK(Website__c),ISBLANK(Client_Name__c),ISBLANK(SuppliedPhone))</errorConditionFormula>
    <errorDisplayField>SuppliedPhone</errorDisplayField>
    <errorMessage>Please fill the mandatory fields Sector, Prospect Name, Prospect Email, Website, Client Name, Prospect Mobile</errorMessage>
</ValidationRule>