force-app/main/default/objects/Case/validationRules/Converted_to_new_Client_ClientName.validationRule-meta.xml
<ValidationRule>
    <fullName>Converted_to_new_Client_ClientName</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status , &quot;Converted to New Client&quot;),
ISCHANGED(Status))
&amp;&amp;
 ISBLANK(Client_Name__c)</errorConditionFormula>
    <errorDisplayField>Client_Name__c</errorDisplayField>
    <errorMessage>Please fill the Client Name.</errorMessage>
</ValidationRule>