force-app/main/default/objects/Case/validationRules/Converted_to_new_Client_ProspectEmail.validationRule-meta.xml
<ValidationRule>
    <fullName>Converted_to_new_Client_ProspectEmail</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status , &quot;Converted to New Client&quot;),
ISCHANGED(Status))
&amp;&amp;
 ISBLANK(SuppliedEmail)</errorConditionFormula>
    <errorDisplayField>SuppliedEmail</errorDisplayField>
    <errorMessage>Please fill the Prospect Email.</errorMessage>
</ValidationRule>