force-app/main/default/objects/Case/validationRules/Converted_to_new_Client_ProspectMobile.validationRule-meta.xml
<ValidationRule>
    <fullName>Converted_to_new_Client_ProspectMobile</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status , &quot;Converted to New Client&quot;),
ISCHANGED(Status))
&amp;&amp;
 ISBLANK(SuppliedPhone)</errorConditionFormula>
    <errorDisplayField>SuppliedPhone</errorDisplayField>
    <errorMessage>Please fill the Prospect Mobile.</errorMessage>
</ValidationRule>