force-app/main/default/objects/Case/validationRules/Converted_to_new_Client_ProspectName.validationRule-meta.xml
<ValidationRule>
    <fullName>Converted_to_new_Client_ProspectName</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
ISPICKVAL(Status , &quot;Converted to New Client&quot;),
ISCHANGED(Status))
&amp;&amp;
OR
(ISBLANK(SuppliedName),
NOT(REGEX(SuppliedName,&quot;^[a-zA-Z ]*$&quot;)))</errorConditionFormula>
    <errorDisplayField>SuppliedName</errorDisplayField>
    <errorMessage>Please enter a valid name</errorMessage>
</ValidationRule>