force-app/main/default/objects/Case/validationRules/Converted_to_new_Client_Sector.validationRule-meta.xml
<ValidationRule>
    <fullName>Converted_to_new_Client_Sector</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status , &quot;Converted to New Client&quot;),
ISCHANGED(Status))
&amp;&amp;
 ISPICKVAL(Sectors__c, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Sectors__c</errorDisplayField>
    <errorMessage>Please fill the Sector.</errorMessage>
</ValidationRule>