force-app/main/default/objects/Case/validationRules/Converted_to_new_Client_Website.validationRule-meta.xml
<ValidationRule>
    <fullName>Converted_to_new_Client_Website</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status , &quot;Converted to New Client&quot;),
ISCHANGED(Status))
&amp;&amp;
 ISBLANK(Website__c)</errorConditionFormula>
    <errorDisplayField>Website__c</errorDisplayField>
    <errorMessage>Please fill the Website.</errorMessage>
</ValidationRule>