force-app/main/default/objects/Case/validationRules/Country_Code_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Country_Code_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status , &quot;Converted to New Client&quot;),
ISCHANGED(Status))
&amp;&amp;
ISPICKVAL(Country_Code__c ,&quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Country_Code__c</errorDisplayField>
    <errorMessage>Please Fill Country Code.</errorMessage>
</ValidationRule>