force-app/main/default/objects/Case/validationRules/InProgress_To_New_is_not_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>InProgress_To_New_is_not_allowed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( PRIORVALUE(Status), &apos;In Progress&apos;),
ISPICKVAL(Status , &quot;New&quot;),
ISCHANGED(Status))</errorConditionFormula>
    <errorMessage>In-Progress To New is not allowed</errorMessage>
</ValidationRule>