force-app/main/default/objects/Case/validationRules/Mobile_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(
NOT(ISNUMBER(SuppliedPhone)),NOT(ISBLANK(SuppliedPhone ))),
LEFT(SuppliedPhone ,1)= &quot;0&quot;,
AND(
NOT(ISBLANK(SuppliedPhone)),
OR(LEN(SuppliedPhone ) &gt;10,
LEN(SuppliedPhone ) &lt; 10),
ISPICKVAL(Country_Code__c, &quot;India (+91)&quot;)
)
)</errorConditionFormula>
    <errorDisplayField>SuppliedPhone</errorDisplayField>
    <errorMessage>Please enter a valid mobile number</errorMessage>
</ValidationRule>