force-app/main/default/objects/Case/validationRules/Mobile_Validation_Accept_Numeric_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Validation_Accept_Numeric_Value</fullName>
    <active>false</active>
    <errorConditionFormula>AND
(
	NOT(ISBLANK(SuppliedPhone)),
	NOT(ISNUMBER(SuppliedPhone))
)</errorConditionFormula>
    <errorDisplayField>SuppliedPhone</errorDisplayField>
    <errorMessage>Please insert only the numeric value</errorMessage>
</ValidationRule>