force-app/main/default/objects/Case/validationRules/validation_on_status_2.validationRule-meta.xml
<ValidationRule>
    <fullName>validation_on_status_2</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  ISPICKVAL(PRIORVALUE(Email_Status__c), &apos;Closed&apos;),
  ISCHANGED(Email_Status__c) 
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>You can&apos;t changed the Status</errorMessage>
</ValidationRule>