force-app/main/default/objects/Case/validationRules/Validation_on_Status_In_progressConv.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_on_Status_In_progressConv</fullName>
    <active>false</active>
    <errorConditionFormula>OR( ISPICKVAL( PRIORVALUE(Email_Status__c), &apos;Converted to New Client&apos;),
ISPICKVAL( PRIORVALUE(Email_Status__c), &apos;In Progress&apos;))
&amp;&amp;
ISPICKVAL(Email_Status__c , &quot;Closed&quot;)
&amp;&amp;
ISCHANGED(Email_Status__c)</errorConditionFormula>
    <errorMessage>Status can&apos;t be closed</errorMessage>
</ValidationRule>