force-app/main/default/objects/Case/listViews/Converted_to_New_Client_Email.listView-meta.xml
<ListView>
    <fullName>Converted_to_New_Client_Email</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Converted to New Client</value>
    </filters>
    <label>Converted to New Client Email</label>
    <sharedTo>
        <group>Sector_Assignment_Team</group>
    </sharedTo>
</ListView>